--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ click==8.3.0
 defusedxml==0.7.1
 distlib==0.4.0
 Django==5.2.6
+django-environ==0.12.0
 django-filter==25.1
 django-modelcluster==6.4
 django-permissionedforms==0.1
@@ -48,4 +49,5 @@ typing_extensions==4.15.0
 urllib3==2.5.0
 virtualenv==20.34.0
 wagtail==7.1.1
+whitenoise==6.11.0
 Willow==1.11.0
